Playing with C library

--- a/example.yml
+++ b/example.yml
@@ -1,7 +1,7 @@
 ---
 
 name: Example Config
-endtime: 15s
+endtime: 1m
 
 nodes:
   - address: 0x0001
@@ -14,7 +14,7 @@ nodes:
       lng: 174.783203
 
 updates:
-  - timestamp: 10s
+  - timestamp: 30s
     node: 0x001
     action: "update-Location"
     comment: Update the location of node 0x001 at 10000 ms into the simulation
