Connector now working, woohoo

--- a/lib/makefile
+++ b/lib/makefile
@@ -1,13 +1,13 @@
 
 TARGET=ons-client
 SOURCES=main.c src/ons.c
-LIBS=-lpthread -lczmq
+LIBS=-lpthread -lczmq -lzmq
 
 ${TARGET}: ${SOURCES}
 	gcc ${SOURCES} ${LIBS} -o $@
 
 run:
-	./${TARGET} "inproc://ons" "testClient"
+	./${TARGET} "ipc:///tmp/ons" "testClient"
 
 clean:
 	rm ${TARGET}
