--- a/example.yml
+++ b/example.yml
@@ -9,8 +9,8 @@ tickrate: 500ms
 # Node defaults
 # These are inherited by all child nodes (unless overwritten)
 defaults:
-#  executable: ./libons/build/ons-client
-#  arguments: "{{.server}} {{.address}}"
+  executable: ./libons/build/ons-client
+  command: "{{.server}} {{.address}}"
 
 # Node definitions
 # This defines the nodes to be linked to the simulator
