--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: go
 
 go:
-  - 1.7.1
+  - 1.8
+
+install:
+  - make install
+  - make build
+  - make libons
+
+script:
+  - make test
 
 notifications:
   email: false
