Adding start/stop receive methods

--- a/cons/makefile
+++ b/cons/makefile
@@ -48,7 +48,7 @@ run:
 	./$(TARGET) "ipc:///tmp/ons" "testClient"
 
 test: libs
-	go test -v -p 1 -timeout 10s ./
+	GODEBUG=cgocheck=0 go test -v -p 1 -timeout 10s ./
 
 # Cleanup build files
 clean:
