--- a/example.yml
+++ b/example.yml
@@ -74,7 +74,7 @@ events:
   - action: "set-location"
     timestamp: 1s
     nodes: [0x0001]
-    comment: Event the location of node 0x001 at 30s into the simulation
+    comment: Update the location of node 0x0001 at t=1s
     data:
       lat: -36.845214
       lon: 174.784408
