--- a/glide.yaml
+++ b/glide.yaml
@@ -6,18 +6,22 @@ import:
 - package: github.com/jessevdk/go-flags
   version: ^1.2.0
 - package: github.com/ryankurte/go-mapbox
-  version: ^0.3.0
+  version: ^0.4.0
   subpackages:
   - lib
   - lib/base
   - lib/maps
 - package: github.com/ryankurte/go-rf
   version: ^0.1.0
-- package: gopkg.in/ryankurte/go-async-cmd.v1
+- package: github.com/ryankurte/go-async-cmd
   version: ^1.0.0
-- package: gopkg.in/yaml.v2
-- package: gopkg.in/zeromq/goczmq.v4
+- package: github.com/go-yaml/yaml
+- package: github.com/zeromq/goczmq
   version: ^4.0.2
+- package: golang.org/x/sync
+  subpackages:
+  - syncmap
+- package: github.com/go-yaml/yaml
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
