--- a/glide.yaml
+++ b/glide.yaml
@@ -21,7 +21,8 @@ import:
 - package: golang.org/x/sync
   subpackages:
   - syncmap
-- package: github.com/go-yaml/yaml
+- package: github.com/google/gopacket
+  version: ^1.1.12
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
