--- a/example.yml
+++ b/example.yml
@@ -38,6 +38,10 @@ medium:
         count: 16
         spacing: 200KHz
 
+plugins:
+  pcap:
+    file: example.pcap
+
 # Node defaults
 # These are inherited by all child nodes (unless overwritten)
 defaults:
