--- a/glide.yaml
+++ b/glide.yaml
@@ -23,6 +23,7 @@ import:
   - syncmap
 - package: github.com/google/gopacket
   version: ^1.1.12
+- package: github.com/ryankurte/go-pcapng
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
