Working on simple example

--- a/examples/chain.yml
+++ b/examples/chain.yml
@@ -11,11 +11,11 @@ tickrate: 1ms
 medium:
   maps:
     level: 16
-    x: 64584
-    y: 39988
+    x: 64583
+    y: 39989
     high-res: true
-    satellite: ./mapbox-satellite-16-64584-39988-9x5-512.jpg
-    terrain: ./mapbox-terrain-rgb-16-64584-39988-9x5-512.png
+    satellite: /tmp/owns/mapbox-satellite-16-64583-39989-10x3-512.jpg
+    terrain:   /tmp/owns/mapbox-terrain-rgb-16-64583-39989-10x3-512.png
   bands:
     Sub1GHz:
       frequency: 433MHz
@@ -42,7 +42,7 @@ medium:
 
 plugins:
   pcap:
-    file: example.pcap
+    file: chain.pcap
 
 # Node defaults
 # These are inherited by all child nodes (unless overwritten)
@@ -54,41 +54,25 @@ defaults:
 # This defines the nodes to be linked to the simulator
 nodes:
   - address: 0x0001
-    details: Quay St
     location: 
-      lat: -36.8474505
-      lng: 174.773418
-      alt: 17.60
+      lat: -36.835
+      lng: 174.770
+      alt: 2.0
   - address: 0x0002
-    details: East Peir
     location: 
-      lat: -36.840376
-      lng: 174.783203
-      alt: 1.90
+      lat: -36.842
+      lng: 174.785
+      alt: 2.0
   - address: 0x0003
-    details: Devonport Wharf
     location: 
-      lat: -36.833957
-      lng: 174.795257
-      alt: 1.80
+      lat: -36.835
+      lng: 174.800
+      alt: 2.0
   - address: 0x0004
-    details: Stanley Point
     location: 
-      lat: -36.828514
-      lng: 174.773170
-      alt: 21.00
-  - address: 0x0005
-    details: Okahu Bay
-    location:
-      lat: -36.845286
-      lng: 174.816868
-      alt: 2.10
-  - address: 0x0006
-    details: Torpedo Bay
-    location:
-      lat: -36.830456
-      lng: 174.809947
-      alt: 1.0
+      lat: -36.842
+      lng: 174.815
+      alt: 2.0
 
 # Event definitions
 # These define changes to the simulation and environment at a given point in time
