--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 
 script:
 - docker run --rm -it -v`pwd`:/root/go/src/github.com/ryankurte/ons ryankurte/docker-native-dev
-  /bin/bash -c "cd /root/go/src/github.com/ryankurte/ons && make install-tools && make install && make test"
+  /bin/bash -c "cd /root/go/src/github.com/ryankurte/ons && make tools && make install && make test"
 
 after_success:
 - mkdir -p release
