--- a/examples/chain.yml
+++ b/examples/chain.yml
@@ -79,6 +79,6 @@ updates:
     nodes: [0x0004]
     comment: Check the route state for node 4
     data:
-      key: route
-      value: 0x0001 0x0002 0x0003
+      key: parent
+      value: 0x0003
   
