--- a/glide.yaml
+++ b/glide.yaml
@@ -24,6 +24,7 @@ import:
 - package: github.com/google/gopacket
   version: ^1.1.12
 - package: github.com/ryankurte/go-pcapng
+- package: github.com/pbnjay/pixfont
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
