--- a/glide.yaml
+++ b/glide.yaml
@@ -25,6 +25,8 @@ import:
   version: ^1.1.12
 - package: github.com/ryankurte/go-pcapng
 - package: github.com/pbnjay/pixfont
+- package: github.com/pkg/profile
+  version: ^1.2.1
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
