--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
-package: github.com/ryankurte/owns
+package: github.com/ryankurte/yawns
 import:
 - package: github.com/golang/protobuf
+  version: ^1.1.0
   subpackages:
   - proto
 - package: github.com/jessevdk/go-flags
