--- a/glide.yaml
+++ b/glide.yaml
@@ -27,6 +27,7 @@ import:
 - package: github.com/pbnjay/pixfont
 - package: github.com/pkg/profile
   version: ^1.2.1
+- package: github.com/jinzhu/copier
 testImport:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
